force-app/main/default/objects/clofor_com_cfs__Benefit__c/fields/clofor_com_cfs__AvailableUsageTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AvailableUsageTime__c</fullName>
    <label>Available Usage Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>