force-app/main/default/objects/clofor_com_cfs__Benefit__c/fields/clofor_com_cfs__DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DiscountRate__c</fullName>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>