force-app/main/default/objects/clofor_com_cfs__Benefit__c/fields/clofor_com_cfs__DiscountType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DiscountType__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DiscountType</valueSetName>
    </valueSet>
</CustomField>