force-app/main/default/objects/clofor_com_cfs__Benefit__c/fields/clofor_com_cfs__DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DiscountValue__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>