force-app/main/default/objects/clofor_com_cfs__Benefit__c/fields/clofor_com_cfs__Publisher__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BENEFITS</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>