force-app/main/default/objects/clofor_com_cfs__Benefit__c/fields/clofor_com_cfs__ScopeOfStore__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ScopeOfStore__c</fullName>
    <label>Scope Of Store</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>