force-app/main/default/objects/clofor_com_cfs__Benefit__c/fields/clofor_com_cfs__TermsOfUse__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TermsOfUse__c</fullName>
    <label>Terms Of Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>