force-app/main/default/objects/clofor_com_cfs__Benefit__c/recordTypes/clofor_com_cfs__Coupon.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Coupon</fullName>
    <active>true</active>
    <description>To manage a discount coupon</description>
    <label>Coupon</label>
</RecordType>