force-app/main/default/objects/clofor_com_cfs__Benefit__c/recordTypes/clofor_com_cfs__GiftCard.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__GiftCard</fullName>
    <active>true</active>
    <description>To manage a Gift Card or Ticket exchange for items up to the stated value</description>
    <label>Gift Card</label>
</RecordType>