force-app/main/default/objects/clofor_com_cfs__Benefit__c/recordTypes/clofor_com_cfs__Voucher.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Voucher</fullName>
    <active>true</active>
    <description>To manager a voucher to exchange for an item or service</description>
    <label>Voucher</label>
</RecordType>